@@ -248,7 +248,7 @@
 						<tr>
 							<td><input type="checkbox" id="gamersgate"><label for="gamersgate">GamersGate</label></td>
 							<td><input type="checkbox" id="greenmangaming"><label for="greenmangaming">GreenMan Gaming</label></td>
-							<td><input type="checkbox" id="gamefly"><label for="gamefly">GameFly PC</label></td>
+							<td><input type="checkbox" id="direct2drive"><label for="direct2drive">Direct2Drive</label></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" id="origin"><label for="origin">Origin PC</label></td>
@@ -262,28 +262,18 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" id="humblewidgets"><label for="humblewidgets">Humble Widgets</label></td>
+							<td><input type="checkbox" id="bundlestars"><label for="bundlestars">Bundle Stars</label></td>
 							<td><input type="checkbox" id="gamesplanet"><label for="gamesplanet">GamesPlanet</label></td>
-							<td><input type="checkbox" id="getgames"><label for="getgames">GetGames</label></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" id="newegg"><label for="newegg">Newegg</label></td>							
-							<td><input type="checkbox" id="adventureshop"><label for="adventureshop">Adventure Shop</label></td>
 							<td><input type="checkbox" id="nuuvem"><label for="nuuvem">Nuuvem</label></td>
-						</tr>
-						<tr>
-							<td><input type="checkbox" id="shinyloot"><label for="shinyloot">ShinyLoot</label></td>
 							<td><input type="checkbox" id="dlgamer"><label for="dlgamer">DLGamer</label></td>
+						</tr>
+						<tr>							
 							<td><input type="checkbox" id="dotemu"><label for="dotemu">DotEmu</label></td>
-						</tr>
-						<tr>
 							<td><input type="checkbox" id="indiegamestand"><label for="indiegamestand">IndieGameStand</label></td>
-							<td><input type="checkbox" id="squenix"><label for="squenix">Square Enix</label></td>
-							<td><input type="checkbox" id="bundlestars"><label for="bundlestars">Bundle Stars</label></td>
-						</tr>
-						<tr>
-							<td><input type="checkbox" id="fireflower"><label for="fireflower">FireFlower</label></td>
-							<td><input type="checkbox" id="gametap"><label for="gametap">GamesTap</label></td>
-							<td><input type="checkbox" id="gameolith"><label for="gameolith">Gameolith</label></td>
+							<td><input type="checkbox" id="squenix"><label for="squenix">Square Enix</label></td>							
 						</tr>
 						<tr>
 							<td><input type="checkbox" id="gamesrepublic"><label for="gamesrepublic">GamesRepublic</label></td>
@@ -296,8 +286,12 @@
 							<td><input type="checkbox" id="playfield"><label for="playfield">Playfield</label></td>
 						</tr>
 						<tr>
+							<td><input type="checkbox" id="fireflower"><label for="fireflower">FireFlower</label></td>
 							<td><input type="checkbox" id="imperialgames"><label for="imperialgames">Imperial Games</label></td>
 						</tr>
+					</table>
+					<li></li>
+					<table>
 						<tr>
 						<li id="view_price_li">
 						<label id="viewprice_text">View in</label>
